@@ -3,6 +3,8 @@
 	* [Cumulative Update] Misc changes	
 	* [Engine] Uploaded missing files
 	* [Linux] Fixed compiling on the Linux platform
+	* [Misc] Updated copyright year
+	* [Engine] Fixed obscure pid file bug	
 
 2022-07-05 Dusan Jocic <dusanjocic@msn.com>
 	* [SoundSystem] Added support for the "Effects Extension" (EAX)
